--- a/styles/main.css
+++ b/styles/main.css
@@ -204,7 +204,8 @@ background-repeat: no-repeat;
 background-size: cover;
 padding-top:5px;
 padding-bottom: 45px;
-
+font-size: 15px;
+font-weight: bold;
 
 }
 .index-section
@@ -240,7 +241,7 @@ width:100%;
 
 }
 #header1{
-  font-size:40px;
+  font-size:38px;
 }
 
  /*------ Animation---------*/
